Added new div to footer

--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </footer>
   </body>
 </html>
