--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
       </section>
     </main>
     <footer>
+      <section2>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section2>
       <div></div>
       <div></div>
       <div></div>
