--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
           </li>
         </ul>
       </section>
+      <section class="specialisation">
+        <div></div>
+      </section>
     </main>
     <footer>
       <section2>
