Styled section about-us

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               на латинице с начала XVI века. стандартной "рыбой" для текстов на
               латинице с начала XVI века.
             </p>
-            <a href="" class="about-us__more">Подробнее о компании</a>
+            <a href="#" class="about-us__more">Подробнее о компании</a>
           </div>
           <img
             class="about-us__image"
@@ -115,7 +115,9 @@
       </section>
 
       <section class="specialisation">
-        <div></div>
+        <div>
+          <img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
+        </div>
       </section>
     </main>
     <footer>
