added and styled section all-services

--- a/index.html
+++ b/index.html
@@ -114,9 +114,68 @@
         </ul>
       </section>
 
-      <section class="specialisation">
-        <div>
-          <img src="" alt="" /><img src="" alt="" /><img src="" alt="" />
+      <section class="all-services">
+        <div class="all-services__main">
+          <p class="all-services__slogan">
+            Наши работы, на которых мы специализируемся
+          </p>
+          <a href="#" class="all-services__more">Все услуги</a>
+        </div>
+        <div class="all-srvices__list">
+          <div class="all-services__item item">
+            <img
+              src="./images/all-services__image.png"
+              alt="Изображение офиса"
+              class="all-services__image"
+              width="350"
+              height="300"
+            />
+            <p class="all-services__slogan">
+              <span>01.</span> Исследование и упаковка
+            </p>
+            <p class="all-services__text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a href="#" class="item__more">Подробнее</a>
+          </div>
+          <div class="all-services__item item">
+            <img
+              src="./images/all-services__image.png"
+              alt="Изображение офиса"
+              class="all-services__image"
+              width="350"
+              height="300"
+            />
+            <p class="all-services__slogan">
+              <span>01.</span> Исследование и упаковка
+            </p>
+            <p class="all-services__text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a href="#" class="item__more">Подробнее</a>
+          </div>
+          <div class="all-services__item item">
+            <img
+              src="./images/all-services__image.png"
+              alt="Изображение офиса"
+              class="all-services__image"
+              width="350"
+              height="300"
+            />
+            <p class="all-services__slogan">
+              <span>01.</span> Исследование и упаковка
+            </p>
+            <p class="all-services__text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века.
+            </p>
+            <a href="#" class="item__more">Подробнее</a>
+          </div>
         </div>
       </section>
     </main>
