--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
           </div>
         </div>
       </section>
+      <section class="all-projects"></section>
     </main>
     <footer>
       <section2>
