last version, wich include sections from 1 to 4

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
               вэб-дизайне.
             </p>
           </li>
+          <li class="services__item empty" style="margin-bottom: 0" ;></li>
+          <li class="services__item empty" style="margin-bottom: 0" ;></li>
         </ul>
         <button class="services__button">Все услуги</button>
       </section>
@@ -75,6 +77,13 @@
           <div class="about-us__info">
             <h2 class="about-us__slogan">Высокие стандарты разработки</h2>
             <p class="about-us__text">
+              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
+              на латинице с начала XVI века. стандартной "рыбой" для текстов на
+              латинице с начала XVI века. Lorem Ipsum - это текст-"рыба", часто
+              используемый в печати и вэб-дизайне. Lorem Ipsum является
+              стандартной "рыбой" для текстов на латинице с начала XVI века.
+              стандартной "рыбой" для текстов на латинице с начала XVI века.
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и
               вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
               на латинице с начала XVI века. стандартной "рыбой" для текстов на
@@ -176,6 +185,16 @@
             </p>
             <a href="#" class="item__more">Подробнее</a>
           </div>
+          <div
+            class="all-services__item empty"
+            style="margin-bottom: 0"
+            ;
+          ></div>
+          <div
+            class="all-services__item empty"
+            style="margin-bottom: 0"
+            ;
+          ></div>
         </div>
       </section>
     </main>
