Added and styled section-5 all-projects

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
               вэб-дизайне.
             </p>
           </li>
-          <li class="services__item empty" style="margin-bottom: 0" ;></li>
-          <li class="services__item empty" style="margin-bottom: 0" ;></li>
+          <li class="services__item empty"></li>
+          <li class="services__item empty"></li>
         </ul>
         <button class="services__button">Все услуги</button>
       </section>
@@ -125,9 +125,9 @@
 
       <section class="all-services">
         <div class="all-services__main">
-          <p class="all-services__slogan">
+          <h2 class="all-services__slogan">
             Наши работы, на которых мы специализируемся
-          </p>
+          </h2>
           <a href="#" class="all-services__more">Все услуги</a>
         </div>
         <div class="all-srvices__list">
@@ -185,16 +185,53 @@
             </p>
             <a href="#" class="item__more">Подробнее</a>
           </div>
-          <div
-            class="all-services__item empty"
-            style="margin-bottom: 0"
-            ;
-          ></div>
-          <div
-            class="all-services__item empty"
-            style="margin-bottom: 0"
-            ;
-          ></div>
+          <div class="all-services__item empty"></div>
+          <div class="all-services__item empty"></div>
+        </div>
+      </section>
+
+      <section class="all-projects">
+        <div class="all-projects__wrapper">
+          <h2 class="all-projects__slogan">Наши проекты</h2>
+          <p class="all-projects__text">
+            Lorem Ipsum - это текст-"рыба", часто используемый в печати и
+            вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
+            латинице с начала XVI века.
+          </p>
+          <div class="all-projects__list list">
+            <a href="#" class="list__item"
+              ><img
+                src="./images/all-projects__image.png"
+                alt="Projects image"
+                width="255"
+                height="255"
+            /></a>
+            <a href="#" class="list__item"
+              ><img
+                src="./images/all-projects__image.png"
+                alt="Projects image"
+                width="255"
+                height="255"
+            /></a>
+            <a href="#" class="list__item"
+              ><img
+                src="./images/all-projects__image.png"
+                alt="Projects image"
+                width="255"
+                height="255"
+            /></a>
+            <a href="#" class="list__item"
+              ><img
+                src="./images/all-projects__image.png"
+                alt="Projects image"
+                width="255"
+                height="255"
+            /></a>
+            <a href="#" class="list__item empty"></a>
+            <a href="#" class="list__item empty"></a>
+            <a href="#" class="list__item empty"></a>
+          </div>
+          <a href="#" class="all-projects__more">Всe проекты</a>
         </div>
       </section>
     </main>
