--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2 class="services__slogan slogan">
           Мы создаем мобильные приложения для крупных корпораций
         </h2>
-        <p class="slogan--description">
+        <p class="slogan__description">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и
           вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
           латинице с начала XVI века.
