--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
         </p>
         <ul class="services__list">
           <li class="services__item">
-            <p class="services__subtitle">Создание сайтов</p>
+            <h3 class="services__subtitle">Создание сайтов</h3>
             <p class="services__description">
               Lorem Ipsum - это текст- "рыба", часто используе в печати и
               вэб-дизайне.
             </p>
           </li>
           <li class="services__item">
-            <p class="services__subtitle">Создание сайтов</p>
+            <h3 class="services__subtitle">Создание сайтов</h3>
             <p class="services__description">
               Lorem Ipsum - это текст- "рыба", часто используе в печати и
               вэб-дизайне.
             </p>
           </li>
           <li class="services__item">
-            <p class="services__subtitle">Создание сайтов</p>
+            <h3 class="services__subtitle">Создание сайтов</h3>
             <p class="services__description">
               Lorem Ipsum - это текст- "рыба", часто используе в печати и
               вэб-дизайне.
@@ -139,9 +139,9 @@
               width="350"
               height="300"
             />
-            <p class="all-services__slogan">
+            <h3 class="all-services__subtitle">
               <span>01.</span> Исследование и упаковка
-            </p>
+            </h3>
             <p class="all-services__text">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и
               вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
@@ -157,9 +157,9 @@
               width="350"
               height="300"
             />
-            <p class="all-services__slogan">
+            <h3 class="all-services__subtitle">
               <span>01.</span> Исследование и упаковка
-            </p>
+            </h3>
             <p class="all-services__text">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и
               вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
@@ -175,9 +175,9 @@
               width="350"
               height="300"
             />
-            <p class="all-services__slogan">
+            <h3 class="all-services__subtitle">
               <span>01.</span> Исследование и упаковка
-            </p>
+            </h3>
             <p class="all-services__text">
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и
               вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
@@ -232,6 +232,35 @@
             <a href="#" class="list__item empty"></a>
           </div>
           <a href="#" class="all-projects__more">Всe проекты</a>
+        </div>
+      </section>
+
+      <section class="video">
+        <div class="video__wrapper">
+          <h2 class="video__slogan">Видео о нашей работе</h2>
+          <p class="video__text">Просто посмотрите, как мы работаем</p>
+          <div class="video__content">
+            <button type="button" class="video__button">Смотреть видео</button>
+          </div>
+        </div>
+        <div class="subscribe">
+          <h3 class="subscribe__slogan">Подпишитесь на нашу рассылку</h3>
+          <p class="subscribe__text">
+            Полезные статьи, акции, новости - получите все это сейчас!
+          </p>
+          <form class="subscribe__form" action="#" method="POST">
+            <label for="subscribe__button"
+              ><button type="button">Подписаться</button></label
+            >
+            <input
+              type="email"
+              id="subscribe__button"
+              placeholder="Ваш e-mail"
+            />
+          </form>
+          <p class="subscribe__statement">
+            Мы не шлем спам, и передаем никому ваши данные.
+          </p>
         </div>
       </section>
     </main>
