--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         ><a href="" class="nav-link">Контакты</a>
       </nav>
     </header>
+
     <main>
       <section class="intro">
         <h2 class="visually-hidden">Кто мы</h2>
@@ -264,18 +265,48 @@
         </div>
       </section>
     </main>
+
     <footer>
-      <section2>
-        <div></div>
-        <div></div>
-        <div></div>
-      </section2>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="footer__wrapper">
+        <div class="contacts">
+          <h3 class="footer-slogan">Контактная информация</h3>
+          <ul class="contacts__list">
+            <li><a href="#" class="contacts__item">test@test.ru</a></li>
+            <li><a href="#" class="contacts__item">+8 777 555 66 99</a></li>
+            <li>
+              <a href="#" class="contacts__item">Москва, Бульвар Ленина 33</a>
+            </li>
+          </ul>
+        </div>
+        <div class="key-links">
+          <h3 class="footer-slogan">Основные ссылки</h3>
+          <ul class="key-links__list">
+            <li><a href="#" class="key-links__item">Главная</a></li>
+            <li><a href="#" class="key-links__item">Наши проекты</a></li>
+            <li><a href="#" class="key-links__item">Наши услуги</a></li>
+            <li><a href="#" class="key-links__item">Контакты</a></li>
+          </ul>
+        </div>
+        <div class="our-projects">
+          <h3 class="footer-slogan">Наши проекты</h3>
+          <ul class="our-projects__list">
+            <li><a href="#" class="our-projects__item">РосНано</a></li>
+            <li><a href="#" class="our-projects__item">Сколково</a></li>
+            <li><a href="#" class="our-projects__item">Проект “Восток”</a></li>
+            <li><a href="#" class="our-projects__item">ТЭЦ Калининграда</a></li>
+          </ul>
+        </div>
+        <div class="socials">
+          <h3 class="footer-slogan">Социальные сети</h3>
+          <ul class="socials__list">
+            <li><a href="#" class="socials__item">VK.com</a></li>
+            <li><a href="#" class="socials__item">Instagram</a></li>
+            <li><a href="#" class="socials__item">Facebook</a></li>
+            <li><a href="#" class="socials__item">Twitter</a></li>
+          </ul>
+        </div>
+      </div>
+      <p class="footer__copyright">(с) 2019. Все права защищены.</p>
     </footer>
   </body>
 </html>
