Added adaptive to header and section 'intro'

--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <main>
       <section class="intro">
         <h2 class="visually-hidden">Кто мы</h2>
-        <div class="intro__title">Передовая IT студия</div>
-        <div class="intro__slogan slogan">
-          Мы создаем легкие решения сложных задач и проблем
+        <div class="intro__wrapper">
+          <div class="intro__title">Передовая IT студия</div>
+          <div class="intro__slogan slogan">
+            Мы создаем легкие решения сложных задач и проблем
+          </div>
+          <button class="intro__button">Наши проекты</button>
         </div>
-        <button class="intro__button">Наши проекты</button>
       </section>
 
       <section class="services">
