Added adaptive to section 'services'

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         </h2>
         <p class="slogan__description">
           Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-          вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на
-          латинице с начала XVI века.
+          вэб-дизайне. Lorem <br />
+          Ipsum является стандартной "рыбой" для текстов на латинице с начала
+          XVI века.
         </p>
         <ul class="services__list">
           <li class="services__item">
