Added adaptive to section 'about-us'

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               вэб-дизайне.
             </p>
           </li>
-          <li class="services__item empty"></li>
-          <li class="services__item empty"></li>
+          <li class="services__item empty-item"></li>
+          <li class="services__item empty-item"></li>
         </ul>
         <button class="services__button">Все услуги</button>
       </section>
@@ -84,16 +84,11 @@
               Lorem Ipsum - это текст-"рыба", часто используемый в печати и
               вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
               на латинице с начала XVI века. стандартной "рыбой" для текстов на
-              латинице с начала XVI века. Lorem Ipsum - это текст-"рыба", часто
-              используемый в печати и вэб-дизайне. Lorem Ipsum является
-              стандартной "рыбой" для текстов на латинице с начала XVI века.
-              стандартной "рыбой" для текстов на латинице с начала XVI века.
-              Lorem Ipsum - это текст-"рыба", часто используемый в печати и
-              вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов
-              на латинице с начала XVI века. стандартной "рыбой" для текстов на
               латинице с начала XVI века.
             </p>
-            <a href="#" class="about-us__more">Подробнее о компании</a>
+            <p class="about-us__more">
+              <a class="about-us__more-link" href="#">Подробнее о компании</a>
+            </p>
           </div>
           <img
             class="about-us__image"
@@ -103,28 +98,34 @@
             height="400"
           />
         </div>
-        <ul class="about-us__projects-list projects">
-          <li class="projects__item item">
-            <p class="item__info">125</p>
-            <p class="item__slogan">Our projects</p>
-          </li>
-          <li class="projects__item item">
-            <p class="item__info">125</p>
-            <p class="item__slogan">Our projects</p>
-          </li>
-          <li class="projects__item item">
-            <p class="item__info">125</p>
-            <p class="item__slogan">Our projects</p>
-          </li>
-          <li class="projects__item item">
-            <p class="item__info">125</p>
-            <p class="item__slogan">Our projects</p>
-          </li>
-          <li class="projects__item item">
-            <p class="item__info">125</p>
-            <p class="item__slogan">Our projects</p>
-          </li>
-        </ul>
+
+        <div class="projects-wrapper">
+          <ul class="about-us__projects-list projects">
+            <li class="projects__item item">
+              <p class="item__info">125</p>
+              <p class="item__slogan">Our projects</p>
+            </li>
+            <li class="projects__item item">
+              <p class="item__info">125</p>
+              <p class="item__slogan">Our projects</p>
+            </li>
+            <li class="projects__item item">
+              <p class="item__info">125</p>
+              <p class="item__slogan">Our projects</p>
+            </li>
+            <li class="projects__item item">
+              <p class="item__info">125</p>
+              <p class="item__slogan">Our projects</p>
+            </li>
+            <li class="projects__item item">
+              <p class="item__info">125</p>
+              <p class="item__slogan">Our projects</p>
+            </li>
+            <li class="projects__item empty-125"></li>
+            <li class="projects__item empty-125"></li>
+            <li class="projects__item empty-125"></li>
+          </ul>
+        </div>
       </section>
 
       <section class="all-services">
