Added adaptive to section four 'all services'

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </h2>
           <a href="#" class="all-services__more">Все услуги</a>
         </div>
-        <div class="all-srvices__list">
+        <div class="all-services__list">
           <div class="all-services__item item">
             <img
               src="./images/all-services__image.png"
@@ -190,8 +190,9 @@
             </p>
             <a href="#" class="item__more">Подробнее</a>
           </div>
-          <div class="all-services__item empty"></div>
-          <div class="all-services__item empty"></div>
+
+          <div class="all-services__item all-services-empty"></div>
+          <div class="all-services__item all-services-empty"></div>
         </div>
       </section>
 
