added adaptive to section five 'all projects'

--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@
                 width="255"
                 height="255"
             /></a>
+            <!-- <a href="#" class="list__item empty"></a>
             <a href="#" class="list__item empty"></a>
-            <a href="#" class="list__item empty"></a>
-            <a href="#" class="list__item empty"></a>
+            <a href="#" class="list__item empty"></a> -->
           </div>
           <a href="#" class="all-projects__more">Всe проекты</a>
         </div>
