Added adaptive to  to section-seven-footer

--- a/index.html
+++ b/index.html
@@ -233,9 +233,6 @@
                 width="255"
                 height="255"
             /></a>
-            <!-- <a href="#" class="list__item empty"></a>
-            <a href="#" class="list__item empty"></a>
-            <a href="#" class="list__item empty"></a> -->
           </div>
           <a href="#" class="all-projects__more">Всe проекты</a>
         </div>
@@ -272,45 +269,46 @@
     </main>
 
     <footer>
-      <div class="footer__wrapper">
-        <div class="contacts">
+      <ul class="footer__wrapper">
+        <li class="contacts">
           <h3 class="footer-slogan">Контактная информация</h3>
-          <ul class="contacts__list">
-            <li><a href="#" class="contacts__item">test@test.ru</a></li>
-            <li><a href="#" class="contacts__item">+8 777 555 66 99</a></li>
+          <ul class="contacts__list hover">
+            <li><a class="contacts__item">test@test.ru</a></li>
+            <li><a class="contacts__item">+8 777 555 66 99</a></li>
             <li>
-              <a href="#" class="contacts__item">Москва, Бульвар Ленина 33</a>
+              <a class="contacts__item">Москва, Бульвар Ленина 33</a>
             </li>
           </ul>
-        </div>
-        <div class="key-links">
+        </li>
+        <li class="key-links">
           <h3 class="footer-slogan">Основные ссылки</h3>
-          <ul class="key-links__list">
+          <ul class="key-links__list hover">
             <li><a href="#" class="key-links__item">Главная</a></li>
             <li><a href="#" class="key-links__item">Наши проекты</a></li>
             <li><a href="#" class="key-links__item">Наши услуги</a></li>
             <li><a href="#" class="key-links__item">Контакты</a></li>
           </ul>
-        </div>
-        <div class="our-projects">
+        </li>
+        <li class="our-projects">
           <h3 class="footer-slogan">Наши проекты</h3>
-          <ul class="our-projects__list">
+          <ul class="our-projects__list hover">
             <li><a href="#" class="our-projects__item">РосНано</a></li>
             <li><a href="#" class="our-projects__item">Сколково</a></li>
             <li><a href="#" class="our-projects__item">Проект “Восток”</a></li>
             <li><a href="#" class="our-projects__item">ТЭЦ Калининграда</a></li>
           </ul>
-        </div>
-        <div class="socials">
+        </li>
+        <li class="socials">
           <h3 class="footer-slogan">Социальные сети</h3>
-          <ul class="socials__list">
+          <ul class="socials__list hover">
             <li><a href="#" class="socials__item">VK.com</a></li>
             <li><a href="#" class="socials__item">Instagram</a></li>
             <li><a href="#" class="socials__item">Facebook</a></li>
             <li><a href="#" class="socials__item">Twitter</a></li>
           </ul>
-        </div>
-      </div>
+        </li>
+        <li class="empty"></li>
+      </ul>
       <p class="footer__copyright">(с) 2019. Все права защищены.</p>
     </footer>
   </body>
